--- a/src/Component/BlazorComponent/Components/Grid/BCol.razor
+++ b/src/Component/BlazorComponent/Components/Grid/BCol.razor
@@ -1,7 +1,7 @@
 @namespace BlazorComponent
 @inherits BDomComponentBase
 
-<Element Tag="@Tag" class="@CssProvider.GetClass()" style="@(GutterStyle + " " + CssProvider.GetStyle())" id="@Id"
+<Element Tag="@Tag" class="@CssProvider.GetClass()" style="@CssProvider.GetStyle()" id="@Id"
          ReferenceCaptureAction="r => Ref = r"
          @attributes="Attributes">
     @ChildContent
