--- a/src/Component/BlazorComponent/Components/Dialog/Content/InnerContent/BDialogInnerContent.razor
+++ b/src/Component/BlazorComponent/Components/Dialog/Content/InnerContent/BDialogInnerContent.razor
@@ -3,7 +3,7 @@
 @inherits ComponentPartBase<TDialog>
 
 <Transition Name="@Transition">
-    <Element Show="Value" class="@CssProvider.GetClass("innerContent")" style="@CssProvider.GetStyle("innerContent")" ReferenceCaptureAction="elmentRference=> DialogRef=elmentRference">
+    <Element Show="IsActive" class="@CssProvider.GetClass("innerContent")" style="@CssProvider.GetStyle("innerContent")" ReferenceCaptureAction="elmentRference=> DialogRef=elmentRference">
         @ComponentChildContent
     </Element>
 </Transition>
