--- a/src/Component/BlazorComponent/Components/DragZone/BDragZone.razor
+++ b/src/Component/BlazorComponent/Components/DragZone/BDragZone.razor
@@ -1,19 +1,29 @@
 ﻿@namespace BlazorComponent
 @inherits BDomComponentBase
-
 <CascadingValue Value="IsDark" Name="IsDark">
     <CascadingValue Value="this" IsFixed>
         <div class="@CssProvider.GetClass()" style="@CssProvider.GetStyle()" id="@Id" @ref="Ref" @attributes="Attributes">
-            @if (Value != null && Value.Any())
+            @if (LoadItems)
             {
-                foreach (var item in Sorts)
+                @if (Items != null && Items.Any())
                 {
-                    <DynamicComponent Type=item.Value.GetType() Parameters=item.Value.ToParameters() @key=item></DynamicComponent>
+                    foreach (var item in Items)
+                    {
+                        <DynamicComponent Type=item.GetType() Parameters=item.ToParameters()></DynamicComponent>
+                    }
                 }
             }
             else
             {
                 @ChildContent
+
+                @if (DynicItems != null && DynicItems.Any())
+                {
+                    foreach (var item in DynicItems)
+                    {
+                        <DynamicComponent Type=item.GetType() Parameters=item.ToParameters()></DynamicComponent>
+                    }
+                }
             }
         </div>
     </CascadingValue>
